OSDOCS-17788 Jobset Operator GA docs

--- a/ai_workloads/jobset_operator/jobset-release-notes.adoc
+++ b/ai_workloads/jobset_operator/jobset-release-notes.adoc
@@ -10,7 +10,7 @@ toc::[]
 [role="_abstract"]
 Track the development, features, and fixes for the {js-operator}, which manages coordinated, large-scale computing workloads on {product-title}.
 
-:operator-name: The {js-operator}
-include::snippets/operator-not-available.adoc[]
-
 For more information, see xref:../../ai_workloads/jobset_operator/index.adoc#js-about[About the {js-operator}].
+
+//Release notes for JobSet Operator 1.0
+include::modules/jobset-release-notes-1-0.adoc[leveloffset=+1]
