OSDOCS-16945#CQA work

--- a/modules/dynamic-provisioning-azure-file-considerations.adoc
+++ b/modules/dynamic-provisioning-azure-file-considerations.adoc
@@ -6,19 +6,26 @@
 [id="azure-file-considerations_{context}"]
 = Considerations when using Azure File
 
-The following file system features are not supported by the default Azure File storage class:
+[role="_abstract"]
+The default Azure File storage class does not support certain file system features.
+
+The following features are not supported:
 
 * Symlinks
+
 * Hard links
+
 * Extended attributes
+
 * Sparse files
+
 * Named pipes
 
-Additionally, the owner user identifier (UID) of the Azure File mounted directory is different from the process UID of the container. The `uid` mount option can be specified in the `StorageClass` object to define
-a specific user identifier to use for the mounted directory.
+Additionally, the owner user identifier (UID) of the Azure File mounted directory is different from the process UID of the container. You can specify the `uid` mount option in the `StorageClass` object to define a specific user identifier to use for the mounted directory.
 
-The following `StorageClass` object demonstrates modifying the user and group identifier, along with enabling symlinks for the mounted directory.
+The following `StorageClass` object demonstrates modifying the `uid` and group identifier (`gid`), along with enabling symlinks for the mounted directory.
 
+.Example Azure File storage class YAML file with modified `uid` and `gid`
 [source,yaml]
 ----
 kind: StorageClass
@@ -26,9 +33,9 @@ apiVersion: storage.k8s.io/v1
 metadata:
   name: azure-file
 mountOptions:
-  - uid=1500 <1>
-  - gid=1500 <2>
-  - mfsymlinks <3>
+  - uid=1500
+  - gid=1500
+  - mfsymlinks
 provisioner: kubernetes.io/azure-file
 parameters:
   location: eastus
@@ -36,6 +43,8 @@ parameters:
 reclaimPolicy: Delete
 volumeBindingMode: Immediate
 ----
-<1> Specifies the user identifier to use for the mounted directory.
-<2> Specifies the group identifier to use for the mounted directory.
-<3> Enables symlinks.
+* `mountOptions.uid`: Specifies the user identifier to use for the mounted directory.
+
+* `mountOptions.gid`: Specifies the group identifier to use for the mounted directory.
+
+* `mountOptions.mfsymlinks`: Enables symlinks.
