--- a/modules/dynamic-provisioning-storage-class-definition.adoc
+++ b/modules/dynamic-provisioning-storage-class-definition.adoc
@@ -3,59 +3,67 @@
 // * storage/dynamic-provisioning.adoc
 // * microshift_storage/dynamic-provisioning-microshift.adoc
 
-
 :_mod-docs-content-type: REFERENCE
 [id="basic-storage-class-definition_{context}"]
 = Basic StorageClass object definition
 
-The following resource shows the parameters and default values that you
-use to configure a storage class. This example uses the AWS
-ElasticBlockStore (EBS) object definition.
+[role="_abstract"]
+The following example shows the parameters and default values to configure a storage class. This example uses the AWS Elastic Block Store (EBS) object definition.
 
 ifndef::openshift-rosa,openshift-rosa-hcp[]
-.Sample `StorageClass` definition
+.Example `StorageClass` definition
 [source,yaml]
 ----
-kind: StorageClass <1>
-apiVersion: storage.k8s.io/v1 <2>
+kind: StorageClass
+apiVersion: storage.k8s.io/v1
 metadata:
-  name: <storage-class-name> <3>
-  annotations: <4>
+  name: <storage-class-name>
+  annotations:
     storageclass.kubernetes.io/is-default-class: 'true'
     ...
-provisioner: kubernetes.io/aws-ebs <5>
-parameters: <6>
+provisioner: kubernetes.io/aws-ebs
+parameters:
   type: gp3
 ...
 ----
-<1> (required) The API object type.
-<2> (required) The current apiVersion.
-<3> (required) The name of the storage class.
-<4> (optional) Annotations for the storage class.
-<5> (required) The type of provisioner associated with this storage class.
-<6> (optional) The parameters required for the specific provisioner, this will change from plug-in to plug-in.
+* `kind`: API object type.
+
+* `apiversion`: The current apiVersion.
+
+* `metadata.name`: The name of the storage class.
+
+* Optional: `metadata.annotations`: Annotations for the storage class.
+
+* `provisioner`: The type of provisioner associated with this storage class.
+
+* Optional: `parameters`: The parameters required for the specific provisioner. This is different for each plugin.
 endif::openshift-rosa,openshift-rosa-hcp[]
 
 ifdef::openshift-rosa,openshift-rosa-hcp[]
-.Sample `StorageClass` definition
+.Example `StorageClass` definition
 [source,yaml]
 ----
-kind: StorageClass <1>
-apiVersion: storage.k8s.io/v1 <2>
+kind: StorageClass
+apiVersion: storage.k8s.io/v1
 metadata:
-  name: <storage-class-name> <3>
-  annotations: <4>
+  name: <storage-class-name>
+  annotations:
     storageclass.kubernetes.io/is-default-class: 'true'
     ...
-provisioner: ebs.csi.aws.com <5>
-parameters: <6>
+provisioner: ebs.csi.aws.com
+parameters:
   type: gp3-csi
 ...
 ----
-<1> (required) The API object type.
-<2> (required) The current apiVersion.
-<3> (required) The name of the storage class.
-<4> (optional) Annotations for the storage class.
-<5> (required) The type of provisioner associated with this storage class.
-<6> (optional) The parameters required for the specific provisioner, this will change from plug-in to plug-in.
+* `kind`: API object type.
+
+* `apiversion`: The current apiVersion.
+
+* `metadata.name`: The name of the storage class.
+
+* Optional: `metadata.annotations`: Annotations for the storage class.
+
+* `provisioner`: The type of provisioner associated with this storage class.
+
+* Optional: `parameters`: The parameters required for the specific provisioner. This is different for each plugin.
 endif::openshift-rosa,openshift-rosa-hcp[]
