--- a/modules/dynamic-provisioning-vsphere-definition.adoc
+++ b/modules/dynamic-provisioning-vsphere-definition.adoc
@@ -6,7 +6,10 @@
 [id="vsphere-definition_{context}"]
 = VMware vSphere object definition
 
-.vsphere-storageclass.yaml
+[role="_abstract"]
+The following is a VMware vSphere example storage class object definition.
+
+.Example vSphere storage class YAML file
 [source,yaml]
 ----
 kind: StorageClass
@@ -15,7 +18,6 @@ metadata:
   name: <storage-class-name> <1>
 provisioner: csi.vsphere.vmware.com <2>
 ----
-<1> Name of the storage class. The persistent volume claim uses this storage class for provisioning the associated persistent volumes.
-<2> For more information about using VMware vSphere CSI with {product-title},
-see the
-link:https://kubernetes.io/docs/concepts/storage/volumes/#vsphere-csi-migration[Kubernetes documentation].
+* `metadata.name`: Name of the storage class. The persistent volume claim uses this storage class for provisioning the associated persistent volumes.
+
+* `provisioner`: The name of the provisioner for the storage class. For vSphere, this is `csi.vsphere.vmware.com`.
