--- a/storage/dynamic-provisioning.adoc
+++ b/storage/dynamic-provisioning.adoc
@@ -6,6 +6,9 @@ include::_attributes/common-attributes.adoc[]
 
 toc::[]
 
+[role="_abstract"]
+In dynamic provisioning, instead of a manually creating a pool of persistent volumes (PVs), an administrator creates a storage class. Using the storage class, {product-title} automatically triggers the storage backend to create a brand-new volume of the exact size and type requested, creates the PV object, and then the PV binds to the persistent volume claim (PVC).
+
 include::modules/dynamic-provisioning-about.adoc[leveloffset=+1]
 
 include::modules/dynamic-provisioning-available-plugins.adoc[leveloffset=+1]
@@ -13,8 +16,6 @@ include::modules/dynamic-provisioning-available-plugins.adoc[leveloffset=+1]
 include::modules/dynamic-provisioning-defining-storage-class.adoc[leveloffset=+1]
 
 include::modules/dynamic-provisioning-storage-class-definition.adoc[leveloffset=+2]
-
-include::modules/dynamic-provisioning-annotations.adoc[leveloffset=+2]
 
 ifndef::openshift-dedicated,openshift-rosa,openshift-rosa-hcp[]
 include::modules/dynamic-provisioning-cinder-definition.adoc[leveloffset=+2]
@@ -24,6 +25,10 @@ include::modules/dynamic-provisioning-manila-csi-definition.adoc[leveloffset=+2]
 endif::openshift-dedicated,openshift-rosa,openshift-rosa-hcp[]
 
 include::modules/dynamic-provisioning-aws-definition.adoc[leveloffset=+2]
+
+[id="dynamic-provisioning-add-resources"_{context}"]
+.Additional resources
+* link:http://docs.aws.amazon.com/general/latest/gr/aws-arns-and-namespaces.html[AWS documentation]
 
 ifndef::openshift-dedicated,openshift-rosa,openshift-rosa-hcp[]
 include::modules/dynamic-provisioning-azure-disk-definition.adoc[leveloffset=+2]
@@ -46,5 +51,7 @@ ifndef::openshift-dedicated,openshift-rosa,openshift-rosa-hcp[]
 include::modules/dynamic-provisioning-vsphere-definition.adoc[leveloffset=+2]
 
 endif::openshift-dedicated,openshift-rosa,openshift-rosa-hcp[]
+
+include::modules/dynamic-provisioning-annotations.adoc[leveloffset=+1]
 
 include::modules/dynamic-provisioning-change-default-class.adoc[leveloffset=+1]
