--- a/modules/dynamic-provisioning-annotations.adoc
+++ b/modules/dynamic-provisioning-annotations.adoc
@@ -5,18 +5,21 @@
 
 :_mod-docs-content-type: PROCEDURE
 [id="storage-class-annotations_{context}"]
-= Storage class annotations
+= Setting the default storage class
 
-To set a storage class as the cluster-wide default, add
-the following annotation to your storage class metadata:
+[role="_abstract"]
+To set a storage class as the cluster-wide default, you need to add an annotation to your storage class metadata.
 
-[source,yaml]
-----
-storageclass.kubernetes.io/is-default-class: "true"
-----
+This enables any persistent volume claim (PVC) that does not specify a specific storage class to automatically be provisioned by the default storage class. While your cluster can have more than one storage class, only one can be the default storage class.
 
-For example:
+.Prerequisites
+* Logged in to a running {product-title} cluster with administrator privileges.
 
+.Procedure
+
+. For your desired storage class, set the `metadata.annotations.storageclass.kubernetes.io/is-default-class` field to `true` as in the following example:
++
+.Example storage class YAML file
 [source,yaml]
 ----
 apiVersion: storage.k8s.io/v1
@@ -26,27 +29,15 @@ metadata:
     storageclass.kubernetes.io/is-default-class: "true"
 ...
 ----
-
-This enables any persistent volume claim (PVC) that does not specify a
-specific storage class to automatically be provisioned through the
-default storage class. However, your cluster can have more than one storage class, but only one of them can be the default storage class.
-
++
 [NOTE]
 ====
-The beta annotation `storageclass.beta.kubernetes.io/is-default-class` is
-still working; however, it will be removed in a future release.
+The beta annotation `storageclass.beta.kubernetes.io/is-default-class` is still working; however, it will be removed in a future release.
 ====
 
-To set a storage class description, add the following annotation
-to your storage class metadata:
-
-[source,yaml]
-----
-kubernetes.io/description: My Storage Class Description
-----
-
-For example:
-
+. (Optional) Create a storage class description in the `metadata.annotations.kubernetes.io/description` field as in the following example:
++
+.Example storage class YAML file
 [source,yaml]
 ----
 apiVersion: storage.k8s.io/v1
