--- a/modules/dynamic-provisioning-available-plugins.adoc
+++ b/modules/dynamic-provisioning-available-plugins.adoc
@@ -6,10 +6,14 @@
 [id="available-plug-ins_{context}"]
 = Available dynamic provisioning plugins
 
-{product-title} provides the following provisioner plugins, which have
-generic implementations for dynamic provisioning that use the cluster's
-configured provider's API to create new storage resources:
+[role="_abstract"]
+{product-title} provides the following provisioner plugins, which have generic implementations for dynamic provisioning using the cluster's configured provider's API to create new storage resources.
 
+[IMPORTANT]
+====
+Any chosen provisioner plugin also requires configuration for the relevant
+cloud, host, or third-party provider as in the relevant documentation.
+====
 
 [options="header",cols="1,1,1"]
 |===
@@ -25,7 +29,7 @@ ifndef::openshift-dedicated,openshift-rosa,openshift-rosa-hcp[]
 
 |{rh-openstack} Manila Container Storage Interface (CSI)
 |`manila.csi.openstack.org`
-|Once installed, the OpenStack Manila CSI Driver Operator and ManilaDriver automatically create the required storage classes for all available Manila share types needed for dynamic provisioning.
+|After being installed, the OpenStack Manila CSI Driver Operator and ManilaDriver automatically create the required storage classes for all available Manila share types needed for dynamic provisioning.
 endif::openshift-dedicated,openshift-rosa,openshift-rosa-hcp[]
 
 |Amazon Elastic Block Store (Amazon EBS)
@@ -49,8 +53,8 @@ ifndef::openshift-rosa,openshift-rosa-hcp[]
 |GCE Persistent Disk (gcePD)
 |`kubernetes.io/gce-pd`
 |In multi-zone configurations, it is advisable to run one {product-title}
-cluster per GCE project to avoid PVs from being created in zones where
-no node in the current cluster exists.
+cluster per GCE project to avoid persistent volumes (PVs) from being created in zones where
+no node exists in the current cluster.
 
 |{ibm-power-server-name} Block
 |`powervs.csi.ibm.com`
@@ -70,7 +74,7 @@ endif::openshift-rosa,openshift-rosa-hcp[]
 //|Storage orchestrator for NetApp ONTAP, SolidFire, and E-Series storage.
 
 ifndef::openshift-dedicated,openshift-rosa,openshift-rosa-hcp[]
-|link:https://www.vmware.com/support/vsphere.html[VMware vSphere]
+|VMware vSphere
 |`kubernetes.io/vsphere-volume`
 |
 endif::openshift-dedicated,openshift-rosa,openshift-rosa-hcp[]
@@ -81,9 +85,3 @@ endif::openshift-dedicated,openshift-rosa,openshift-rosa-hcp[]
 //HPE Nimble Kube Storage Controller.
 
 |===
-
-[IMPORTANT]
-====
-Any chosen provisioner plugin also requires configuration for the relevant
-cloud, host, or third-party provider as per the relevant documentation.
-====
