--- a/modules/dynamic-provisioning-aws-definition.adoc
+++ b/modules/dynamic-provisioning-aws-definition.adoc
@@ -4,42 +4,41 @@
 
 :_mod-docs-content-type: REFERENCE
 [id="aws-definition_{context}"]
-= AWS Elastic Block Store (EBS) object definition
+= AWS Elastic Block Store (EBS) StorageObject object definition
 
-.aws-ebs-storageclass.yaml
+[role="_abstract"]
+The following is an example AWS Elastic Block Store (EBS) storage class object definition.
+
+.Example AWS EBS storage class YAML file
 [source,yaml]
 ----
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  name: <storage-class-name> <1>
+  name: <storage-class-name>
 provisioner: ebs.csi.aws.com
 parameters:
-  type: io1 <2>
-  iopsPerGB: "10" <3>
-  encrypted: "true" <4>
-  kmsKeyId: keyvalue <5>
-  fsType: ext4 <6>
+  type: io1
+  iopsPerGB: "10"
+  encrypted: "true"
+  kmsKeyId: keyvalue
+  fsType: ext4
 ----
-<1> (required) Name of the storage class. The persistent volume claim uses this storage class for provisioning the associated persistent volumes.
-<2> (required) Select from `io1`, `gp3`, `sc1`, `st1`. The default is `gp3`.
-See the
-link:http://docs.aws.amazon.com/general/latest/gr/aws-arns-and-namespaces.html[AWS documentation]
-for valid Amazon Resource Name (ARN) values.
-<3> Optional: Only for *io1* volumes. I/O operations per second per GiB.
-The AWS volume plugin multiplies this with the size of the requested
-volume to compute IOPS of the volume. The value cap is 20,000 IOPS, which
-is the maximum supported by AWS. See the
-link:http://docs.aws.amazon.com/general/latest/gr/aws-arns-and-namespaces.html[AWS documentation]
-for further details.
-<4> Optional: Denotes whether to encrypt the EBS volume. Valid values
-are `true` or `false`.
-<5> Optional: The full ARN of the key to use when encrypting the volume.
-If none is supplied, but `encypted` is set to `true`, then AWS generates a
-key. See the
-link:http://docs.aws.amazon.com/general/latest/gr/aws-arns-and-namespaces.html[AWS documentation]
-for a valid ARN value.
-<6> Optional: File system that is created on dynamically provisioned
-volumes. This value is copied to the `fsType` field of dynamically
-provisioned persistent volumes and the file system is created when the
-volume is mounted for the first time. The default value is `ext4`.
+* `metadata.name`: Name of the storage class. The persistent volume claim uses this storage class for provisioning the associated persistent volumes.
+
+* `parameters.type`: Select from `io1`, `gp3`, `sc1`, `st1`. The default is `gp3`. For valid Amazon Resource Name (ARN) values, see the AWS documentation, _Identify AWS resources with Amazon Resource Names (ARNs)_.
+
+* Optional: `parameters.iopsPerGB`. Only for *io1* volumes. I/O operations per second per GiB.
++
+The AWS volume plugin multiplies this with the size of the requested volume to compute IOPS of the volume. The maximum value is 20,000 IOPS, which
+is the maximum supported by AWS. 
++
+For more information, see the AWS documentation, _Identify AWS resources with Amazon Resource Names (ARNs)_.
+
+* Optional: `parameters.encrypted`. Indicates whether to encrypt the EBS volume. Valid values are `true` or `false`.
+
+* Optional: `parameters.kmsKeyId`. The full ARN of the key to use when encrypting the volume. If none is supplied, but `encypted` is set to `true`, then AWS generates a key. 
++
+For valid ARN values, see the AWS documentation, _Identify AWS resources with Amazon Resource Names (ARNs)_.
+
+* Optional: `parameters.fsType`. File system that is created on dynamically provisioned volumes. This value is copied to the `fsType` field of dynamically provisioned persistent volumes, and the file system is created when the volume is mounted for the first time. The default value is `ext4`.
