--- a/modules/dynamic-provisioning-azure-file-definition.adoc
+++ b/modules/dynamic-provisioning-azure-file-definition.adoc
@@ -6,55 +6,59 @@
 [id="azure-file-definition_{context}"]
 = Azure File object definition
 
-The Azure File storage class uses secrets to store the Azure storage account name
-and the storage account key that are required to create an Azure Files share. These
-permissions are created as part of the following procedure.
+[role="_abstract"]
+The Azure File storage class uses secrets to store the Azure storage account name and the storage account key that are required to create Azure File shares. These permissions are created as part of the following procedure.
 
 .Procedure
 
-. Define a `ClusterRole` object that allows access to create and view secrets:
+. Define a `ClusterRole` object that allows access to create and view secrets as in the following example file:
 +
+.Cluster role example YAML file
 [source,yaml]
 ----
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-#  name: system:azure-cloud-provider
-  name: <persistent-volume-binder-role> <1>
+  name: <persistent-volume-binder-role>
 rules:
 - apiGroups: ['']
   resources: ['secrets']
   verbs:     ['get','create']
 ----
-<1> The name of the cluster role to view and create secrets.
++
+* `Metadata.name`: The name of the cluster role to view and create secrets.
 
-. Add the cluster role to the service account:
+. Add the cluster role to the service account by running the following command:
 +
 [source,terminal]
 ----
 $ oc adm policy add-cluster-role-to-user <persistent-volume-binder-role> system:serviceaccount:kube-system:persistent-volume-binder
 ----
-
-. Create the Azure File `StorageClass` object:
 +
+Where `<persistent-volume-binder-role>` is the name of the cluster role you provided in the preceding step.
+
+. Create the Azure File `StorageClass` object as in the following example file:
++
+.Example Azure File storage class YAML file
 [source,yaml]
 ----
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  name: <azure-file> <1>
+  name: <azure-file>
 provisioner: kubernetes.io/azure-file
 parameters:
-  location: eastus <2>
-  skuName: Standard_LRS <3>
-  storageAccount: <storage-account> <4>
+  location: eastus
+  skuName: Standard_LRS
+  storageAccount: <storage-account>
 reclaimPolicy: Delete
 volumeBindingMode: Immediate
 ----
-<1> Name of the storage class. The persistent volume claim uses this storage class for provisioning the associated persistent volumes.
-<2> Location of the Azure storage account, such as `eastus`. Default is empty, meaning that a new Azure storage account will be created in the {product-title} cluster's location.
-<3> SKU tier of the Azure storage account, such as `Standard_LRS`. Default is empty, meaning that a new Azure storage account will be created with the `Standard_LRS` SKU.
-<4> Name of the Azure storage account. If a storage account is provided, then
-`skuName` and `location` are ignored. If no storage account is provided, then
-the storage class searches for any storage account that is associated with the
-resource group for any accounts that match the defined `skuName` and `location`.
++
+* `metadata.name`: Name of the storage class. The persistent volume claim uses this storage class for provisioning the associated persistent volumes.
+
+* `parameters.location`: Location of the Azure storage account, such as `eastus`. The default is empty, meaning that a new Azure storage account is created in the {product-title} cluster's location.
+
+* `parameters.skuName`: SKU tier of the Azure storage account, such as `Standard_LRS`. The default is empty, meaning that a new Azure storage account is created with the `Standard_LRS` SKU.
+
+* `parameters.storageAccount`: Name of the Azure storage account. If a storage account is provided, then `skuName` and `location` are ignored. If no storage account is provided, the storage class searches for storage accounts associated with the resource group for accounts that match the defined `skuName` and `location`.
