--- a/modules/dynamic-provisioning-change-default-class.adoc
+++ b/modules/dynamic-provisioning-change-default-class.adoc
@@ -7,7 +7,8 @@
 [id="change-default-storage-class_{context}"]
 = Changing the default storage class
 
-Use the following procedure to change the default storage class.
+[role="_abstract"]
+You can change the current default storage class. 
 
 For example, if you have two defined storage classes, `gp3` and `standard`, and you want to change the default storage class from `gp3` to `standard`.
 
@@ -17,9 +18,7 @@ For example, if you have two defined storage classes, `gp3` and `standard`, and 
 
 .Procedure
 
-To change the default storage class:
-
-. List the storage classes:
+. List the storage classes by running the following command:
 +
 [source,terminal]
 ----
@@ -30,10 +29,11 @@ $ oc get storageclass
 [source,terminal]
 ----
 NAME                 TYPE
-gp3 (default)        ebs.csi.aws.com <1>
+gp3 (default)        ebs.csi.aws.com
 standard             ebs.csi.aws.com
 ----
-<1> `(default)` indicates the default storage class.
++
+The text `(default)` indicates the default storage class. In this example `gp3` is the current default storage class.
 
 . Make the desired storage class the default.
 +
@@ -62,7 +62,7 @@ For the old default storage class, change the value of the `storageclass.kuberne
 $ oc patch storageclass gp3 -p '{"metadata": {"annotations": {"storageclass.kubernetes.io/is-default-class": "false"}}}'
 ----
 
-. Verify the changes:
+. Verify the changes by running the following command:
 +
 [source,terminal]
 ----
@@ -76,3 +76,5 @@ NAME                 TYPE
 gp3                  ebs.csi.aws.com
 standard (default)   ebs.csi.aws.com
 ----
++
+The `standard` storage class is now the default.
