--- a/modules/dynamic-provisioning-cinder-definition.adoc
+++ b/modules/dynamic-provisioning-cinder-definition.adoc
@@ -4,27 +4,28 @@
 
 :_mod-docs-content-type: REFERENCE
 [id="openstack-cinder-storage-class_{context}"]
-= {rh-openstack} Cinder object definition
+= {rh-openstack} Cinder StorageObject object definition
 
-.cinder-storageclass.yaml
+[role="_abstract"]
+The following is a {rh-openstack} Cinder example storage class object definition.
+
+.Example Cinder storage class YAML file
 [source,yaml]
 ----
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  name: <storage-class-name> <1>
+  name: <storage-class-name>
 provisioner: kubernetes.io/cinder
 parameters:
-  type: fast  <2>
-  availability: nova <3>
-  fsType: ext4 <4>
+  type: fast
+  availability: nova
+  fsType: ext4
 ----
-<1> Name of the storage class. The persistent volume claim uses this storage class for provisioning the associated persistent volumes.
-<2> Volume type created in Cinder. Default is empty.
-<3> Availability Zone. If not specified, volumes are generally
-round-robined across all active zones where the {product-title} cluster
-has a node.
-<4> File system that is created on dynamically provisioned volumes. This
-value is copied to the `fsType` field of dynamically provisioned
-persistent volumes and the file system is created when the volume is
-mounted for the first time. The default value is `ext4`.
+* `metadata.name`: Name of the storage class. The persistent volume claim uses this storage class for provisioning the associated persistent volumes.
+
+* `parameter.type`: Volume type created in Cinder. Default is empty.
+
+* `parameters.availability`: Availability Zone. If not specified, volumes are generally round-robined across all active zones where the{product-title} cluster has a node.
+
+* `parameters.fsType`: File system that is created on dynamically provisioned volumes. This value is copied to the `fsType` field of dynamically provisioned persistent volumes, and the file system is created when the volume is mounted for the first time. The default value is `ext4`.
