--- a/modules/dynamic-provisioning-gce-definition.adoc
+++ b/modules/dynamic-provisioning-gce-definition.adoc
@@ -6,20 +6,24 @@
 [id="gce-persistentdisk-storage-class_{context}"]
 = GCE PersistentDisk (gcePD) object definition
 
-.gce-pd-storageclass.yaml
+[role="_abstract"]
+The following is a GCE PD example storage class object definition.
+
+.Example GCE PD storage class YAML file
 [source,yaml]
 ----
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: <storage-class-name> <1>
+  name: <storage-class-name>
 provisioner: kubernetes.io/gce-pd
 parameters:
-  type: pd-ssd <2>
+  type: pd-ssd
   replication-type: none
 volumeBindingMode: WaitForFirstConsumer
 allowVolumeExpansion: true
 reclaimPolicy: Delete
 ----
-<1> Name of the storage class. The persistent volume claim uses this storage class for provisioning the associated persistent volumes.
-<2> Select `pd-ssd`, `pd-standard`, or `hyperdisk-balanced`. The default is `pd-ssd`.
+* `metadata.name`: The name of the storage class. The persistent volume claim uses this storage class for provisioning the associated persistent volumes.
+
+* `parameters.type`: Select `pd-ssd`, `pd-standard`, or `hyperdisk-balanced`. The default is `pd-ssd`.
