OSDOCS-16945# CQA work Storage -- vol resize

--- a/modules/storage-expanding-add-volume-expansion.adoc
+++ b/modules/storage-expanding-add-volume-expansion.adoc
@@ -7,8 +7,8 @@
 [id="add-volume-expansion_{context}"]
 = Enabling volume expansion support
 
-Before you can expand persistent volumes, the `StorageClass` object must
-have the `allowVolumeExpansion` field set to `true`.
+[role="_abstract"]
+Before you can expand persistent volumes, the `StorageClass` object must have the `allowVolumeExpansion` field set to `true`.
 
 .Procedure
 
@@ -16,13 +16,14 @@ have the `allowVolumeExpansion` field set to `true`.
 +
 [source,terminal]
 ----
-$ oc edit storageclass <storage_class_name> <1>
+$ oc edit storageclass <storage_class_name>
 ----
-<1> Specifies the name of the storage class.
 +
-The following example demonstrates adding this line at the bottom
-of the storage class configuration.
+Enter the name of storage class in `<storage_class_name>`.
 +
+The following example shows adding this line at the bottom of the storage class configuration.
++
+.Example storage class YAML file with `allowVolumeExpansion` field set to `true`
 [source,yaml]
 ----
 apiVersion: storage.k8s.io/v1
@@ -31,7 +32,7 @@ kind: StorageClass
 parameters:
   type: gp2
 reclaimPolicy: Delete
-allowVolumeExpansion: true <1>
+allowVolumeExpansion: true
 ----
-<1> Setting this attribute to `true` allows PVCs to be
-expanded after creation.
++
+* `parameters.allowVolumeExpansion`: Setting this field to `true` allows persistent volume claims (PVCs) to be expanded after creation.
