--- a/modules/storage-expanding-csi-volumes.adoc
+++ b/modules/storage-expanding-csi-volumes.adoc
@@ -3,25 +3,30 @@
 // * storage/expanding-persistent-volumes.adoc
 //* microshift_storage/expanding-persistent-volumes-microshift.adoc
 
-
 :_mod-docs-content-type: PROCEDURE
 [id="expanding-csi-volumes_{context}"]
 = Expanding CSI volumes
 
+[role="_abstract"]
 You can use the Container Storage Interface (CSI) to expand storage volumes after they have already been created.
 
 Shrinking persistent volumes (PVs) is _not_ supported.
 
 .Prerequisites
 
-* The underlying CSI driver supports resize. See "CSI drivers supported by {product-title}" in the "Additional resources" section.
+* The underlying CSI driver supports resize. 
++
+For information about which CSI drivers support resizing, see under the _Additional resources_ section "CSI drivers supported by {product-title}".
 
 * Dynamic provisioning is used.
 
-* The controlling `StorageClass` object has `allowVolumeExpansion` set to `true`. For more information, see "Enabling volume expansion support."
+* The controlling `StorageClass` object has `allowVolumeExpansion` set to `true`. 
++
+For more information, see section _Enabling volume expansion support_.
 
 .Procedure
 
-. For the persistent volume claim (PVC), set `.spec.resources.requests.storage` to the desired new size.
+* For the persistent volume claim (PVC), set `.spec.resources.requests.storage` to the desired new size.
 
-. Watch the `status.conditions` field of the PVC to see if the resize has completed. {product-title} adds the `Resizing` condition to the PVC during expansion, which is removed after expansion completes.
+.Verification
+To confirm that the resize is finished, look at the `status.conditions` field of the PVC . {product-title} adds the `Resizing` condition to the PVC during expansion, which is removed after expansion completes.
