--- a/modules/storage-expanding-filesystem-pvc.adoc
+++ b/modules/storage-expanding-filesystem-pvc.adoc
@@ -7,28 +7,32 @@
 [id="expanding-pvc-filesystem_{context}"]
 = Expanding persistent volume claims (PVCs) with a file system
 
+[role="_abstract"]
 ifndef::microshift,openshift-rosa,openshift-rosa-hcp[]
-Expanding PVCs based on volume types that need file system resizing, such as GCE, EBS, and Cinder, is a two-step process. First, expand the volume objects in the cloud provider. Second, expand the file system on the node.
+Expanding PVCs based on volume types that need file system resizing, such as Google Cloud Platform (GCP) persistent disk (PD), AWS Elastic Block Storage (EBS), and Cinder, is a two-step process. First, expand the volume objects in the cloud provider. Second, expand the file system on the node.
 endif::microshift,openshift-rosa,openshift-rosa-hcp[]
 
 ifdef::microshift[]
-Expanding PVCs based on volume types that need file system resizing, such as GCE Persistent Disk volumes (gcePD), AWS Elastic Block Store EBS (EBS), and Cinder, is a two-step process. First, expand the volume objects in the cloud provider. Second, expand the file system on the node.
+Expanding PVCs based on volume types that need file system resizing, such as Google Cloud Platform (GCP) persistent disk (PD), AWS Elastic Block Store EBS (EBS), and Cinder, is a two-step process. First, expand the volume objects in the cloud provider. Second, expand the file system on the node.
 endif::microshift[]
 
 ifdef::openshift-rosa,openshift-rosa-hcp[]
-Expanding PVCs based on volume types that need file system resizing, such as AWS Elastic Block Store EBS (EBS) is a two-step process. First, expand the volume objects in the cloud provider. Second, expand the file system on the node.
+Expanding PVCs based on volume types that need file system resizing, such as AWS Elastic Block Store (EBS) is a two-step process. First, expand the volume objects in the cloud provider. Second, expand the file system on the node.
 endif::openshift-rosa,openshift-rosa-hcp[]
 
 Expanding the file system on the node only happens when a new pod is started with the volume.
 
 .Prerequisites
 
-* The controlling `StorageClass` object must have `allowVolumeExpansion` set to `true`.
+* The controlling storage class has the `allowVolumeExpansion` field set to `true`. 
++
+For more information, see section _Enabling volume expansion support_.
 
 .Procedure
 
-. Edit the PVC and request a new size by editing `spec.resources.requests`. For example, the following expands the `ebs` PVC to 8 Gi:
+* Edit the PVC and request a new size by editing `spec.resources.requests`. For example, the following expands the `ebs` PVC to 8 Gi:
 +
+.Example PVC YAML file
 [source,yaml]
 ----
 kind: PersistentVolumeClaim
@@ -41,16 +45,23 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 8Gi <1>
+      storage: 8Gi
 ----
 [.small]
-<1> Updating `spec.resources.requests` to a larger amount expands the PVC.
++
+* `spec.resources.requests`: Updating this field to a larger amount expands the PVC.
 
-. After the cloud provider object has finished resizing, the PVC is set to `FileSystemResizePending`. Check the condition by entering the following command:
+.Verification
+After the cloud provider object has finished resizing, the PVC is set to `FileSystemResizePending`. 
+
+* Check the condition by running the following command:
 +
 [source,terminal]
 ----
 $ oc describe pvc <pvc_name>
 ----
 
-. When the cloud provider object has finished resizing, the `PersistentVolume` object reflects the newly requested size in `PersistentVolume.Spec.Capacity`. At this point, you can create or recreate a new pod from the PVC to finish the file system resizing. Once the pod is running, the newly requested size is available and the `FileSystemResizePending` condition is removed from the PVC.
+.Next steps
+When the cloud provider object has finished resizing, the `PersistentVolume` object reflects the newly requested size in `PersistentVolume.Spec.Capacity`.
+
+You can now create or recreate a new pod from the PVC to finish the file system resizing. After the pod is running, the newly requested size is available and the `FileSystemResizePending` condition is removed from the PVC.
