--- a/modules/storage-expanding-flexvolume.adoc
+++ b/modules/storage-expanding-flexvolume.adoc
@@ -3,35 +3,42 @@
 // * storage/expanding-persistent-volumes.adoc
 //* microshift_storage/expanding-persistent-volumes-microshift.adoc
 
-
 :_mod-docs-content-type: PROCEDURE
 [id="expanding-flexvolume_{context}"]
 = Expanding FlexVolume with a supported driver
 
-When using FlexVolume to connect to your back-end storage system, you can expand persistent storage volumes after they have already been created. This is done by manually updating the persistent volume claim (PVC) in {product-title}.
-
-FlexVolume allows expansion if the driver is set with `RequiresFSResize` to `true`. The FlexVolume can be expanded on pod restart.
+[role="_abstract"]
+When using FlexVolume to connect to your back-end storage system, you can expand persistent storage volumes after they have already been created. You do this by manually updating the persistent volume claim (PVC) in {product-title}.
 
 Similar to other volume types, FlexVolume volumes can also be expanded when in use by a pod.
 
 .Prerequisites
 
-* The underlying volume driver supports resize.
-* The driver is set with the `RequiresFSResize` capability to `true`.
+* The underlying volume driver supports resize. 
++
+For information about which CSI drivers support resizing, see under the _Additional resources_ section "CSI drivers supported by {product-title}".
+
+* The driver is set with the `RequiresFSResize` capability to `true`. The FlexVolume can then be expanded after restarting the pod.
+
 * Dynamic provisioning is used.
+
 * The controlling `StorageClass` object has `allowVolumeExpansion` set to `true`.
++
+For more information, see section _Enabling volume expansion support_.
 
 .Procedure
 
 * To use resizing in the FlexVolume plugin, you must implement the `ExpandableVolumePlugin` interface using these methods:
 
-`RequiresFSResize`::
+** `RequiresFSResize`
++
 If `true`, updates the capacity directly. If `false`, calls the `ExpandFS` method to finish the filesystem resize.
 
-`ExpandFS`::
+** `ExpandFS`
++
 If `true`, calls `ExpandFS` to resize filesystem after physical volume expansion is done. The volume driver can also perform physical volume resize together with filesystem resize.
 
 [IMPORTANT]
 ====
-Because {product-title} does not support installation of FlexVolume plugins on control plane nodes, it does not support control-plane expansion of FlexVolume.
+Because {product-title} does not support installation of FlexVolume plugins on control plane nodes, it does not support control plane expansion of FlexVolume.
 ====
