--- a/modules/storage-expanding-local-volumes.adoc
+++ b/modules/storage-expanding-local-volumes.adoc
@@ -3,11 +3,11 @@
 // * storage/expanding-persistent-volumes.adoc
 //* microshift_storage/expanding-persistent-volumes-microshift.adoc
 
-
 :_mod-docs-content-type: PROCEDURE
 [id="expanding-local-volumes_{context}"]
 = Expanding local volumes
 
+[role="_abstract"]
 You can manually expand persistent volumes (PVs) and persistent volume claims (PVCs) created by using the local storage operator (LSO).
 
 .Procedure
