--- a/modules/storage-expanding-recovering-failure.adoc
+++ b/modules/storage-expanding-recovering-failure.adoc
@@ -7,6 +7,7 @@
 [id="expanding-recovering-from-failure_{context}"]
 = Recovering from failure when expanding volumes
 
+[role="_abstract"]
 If a resize request fails or remains in a pending state, you can try again by entering a different resize value in `.spec.resources.requests.storage` for the persistent volume claim (PVC). The new value must be larger than the original volume size.
 
 If you are still having issues, use the following procedure to recover.
