OSDOCS-16945#CQA work Storage ephemeral vols

--- a/modules/storage-ephemeral-vols-lifecycle.adoc
+++ b/modules/storage-ephemeral-vols-lifecycle.adoc
@@ -8,8 +8,10 @@
 [id="generic-ephemeral-vols-lifecycle_{context}"]
 = Lifecycle and persistent volume claims
 
-The parameters for a volume claim are allowed inside a volume source of a pod. Labels, annotations, and the whole set of fields for persistent volume claims (PVCs) are supported. When such a pod is created, the ephemeral volume controller then creates an actual PVC object (from the template shown in the _Creating generic ephemeral volumes_ procedure) in the same namespace as the pod, and ensures that the PVC is deleted when the pod is deleted. This triggers volume binding and provisioning in one of two ways:
+[role="_abstract"]
+The parameters for a volume claim are allowed inside a volume source of a pod. Labels, annotations, and the whole set of fields for persistent volume claims (PVCs) are supported. When such a pod is created, the ephemeral volume controller then creates an actual PVC object (from the template shown in the _Creating generic ephemeral volumes_ procedure) in the same namespace as the pod, and ensures that the PVC is deleted when the pod is deleted. 
 
+This triggers volume binding and provisioning in one of two ways:
 
 * Either immediately, if the storage class uses immediate volume binding.
 +
