--- a/modules/storage-ephemeral-vols-overview.adoc
+++ b/modules/storage-ephemeral-vols-overview.adoc
@@ -8,8 +8,7 @@
 [id="generic-ephemeral-vols-overview_{context}"]
 = Overview
 
-Generic ephemeral volumes are a type of ephemeral volume that can be provided by all storage drivers that support persistent volumes and dynamic provisioning. Generic ephemeral volumes are similar to `emptyDir` volumes in that they provide a per-pod directory for scratch data, which is usually empty after provisioning.
-
+[role="_abstract"]
 Generic ephemeral volumes are specified inline in the pod spec and follow the pod's lifecycle. They are created and deleted along with the pod.
 
 Generic ephemeral volumes have the following features:
