--- a/storage/generic-ephemeral-vols.adoc
+++ b/storage/generic-ephemeral-vols.adoc
@@ -1,8 +1,12 @@
 :_mod-docs-content-type: ASSEMBLY
 [id="generic-ephemeral-volumes"]
-= Generic ephemeral volumes
+
 include::_attributes/common-attributes.adoc[]
 :context: generic-ephemeral-volumes
+= Generic ephemeral volumes
+
+[role="_abstract"]
+Generic ephemeral volumes are a type of ephemeral volume that can be provided by all storage drivers that support persistent volumes and dynamic provisioning. Generic ephemeral volumes are similar to `emptyDir` volumes in that they provide a per-pod directory for scratch data, which is usually empty after provisioning.
 
 toc::[]
 
