--- a/modules/storage-ephemeral-vols-procedure.adoc
+++ b/modules/storage-ephemeral-vols-procedure.adoc
@@ -3,10 +3,12 @@
 // * storage/generic-ephemeral-vols.adoc
 //* microshift_storage/generic-ephemeral-volumes-microshift.adoc
 
-
 :_mod-docs-content-type: PROCEDURE
 [id="generic-ephemeral-vols-procedure_{context}"]
 = Creating generic ephemeral volumes
+
+[role="_abstract"]
+You can create generic ephemeral volumes as needed.
 
 .Procedure
 
@@ -30,7 +32,7 @@ spec:
         name: data
       command: [ "sleep", "1000000" ]
   volumes:
-    - name: data <1>
+    - name: data
       ephemeral:
         volumeClaimTemplate:
           metadata:
@@ -49,4 +51,5 @@ endif::microshift[]
                 storage: 1Gi
 
 ----
-<1> Generic ephemeral volume claim.
++
+* `spec.volumes.name`: Name of the generic ephemeral volume claim.
