--- a/modules/storage-ephemeral-vols-pvc-naming.adoc
+++ b/modules/storage-ephemeral-vols-pvc-naming.adoc
@@ -7,6 +7,7 @@
 [id="generic-ephemeral-vols-pvc-naming_{context}"]
 = Persistent volume claim naming
 
+[role="_abstract"]
 Automatically created persistent volume claims (PVCs) are named by a combination of the pod name and the volume name, with a hyphen (-) in the middle. This naming convention also introduces a potential conflict between different pods, and between pods and manually created PVCs.
 
 For example, `pod-a` with volume `scratch` and `pod` with volume `a-scratch` both end up with the same PVC name, `pod-a-scratch`.
