OSDOCS-16945# CQA work Storage-- non-graceful shutdown

--- a/modules/persistent-storage-csi-vol-detach-non-graceful-shutdown-procedure.adoc
+++ b/modules/persistent-storage-csi-vol-detach-non-graceful-shutdown-procedure.adoc
@@ -7,13 +7,14 @@
 [id="persistent-storage-csi-vol-detach-non-graceful-shutdown-procedure_{context}"]
 = Adding an out-of-service taint manually for automatic volume detachment
 
+[role="_abstract"] 
+To allow volumes to detach automatically from a node after a non-graceful node shutdown, you can add an out-of-service taint.
+
 .Prerequisites
 
 * Access to the cluster with cluster-admin privileges.
 
 .Procedure
-
-To allow volumes to detach automatically from a node after a non-graceful node shutdown:
 
 . After a node is detected as unhealthy, shut down the worker node.
 
@@ -21,9 +22,10 @@ To allow volumes to detach automatically from a node after a non-graceful node s
 +
 [source,terminal]
 ----
-$ oc get node <node_name> <1>
+$ oc get node <node_name>
 ----
-<1> <node_name> = name of the node that shut down non-gracefully
++
+* `<node_name>` = name of the node that shut down non-gracefully
 +
 [IMPORTANT]
 ====
@@ -34,22 +36,21 @@ If the node is not completely shut down, do not proceed with tainting the node. 
 +
 [IMPORTANT]
 ====
-Tainting a node this way deletes all pods on that node. This also causes any pods that are backed by 
-statefulsets to be evicted, and replacement pods to be created on a different node.
+Tainting a node this way deletes all pods on that node. This also causes any pods that are backed by statefulsets to be evicted, and replacement pods to be created on a different node.
 ====
 +
 [source,terminal]
 ----
-$ oc adm taint node <node_name> node.kubernetes.io/out-of-service=nodeshutdown:NoExecute <1>
+$ oc adm taint node <node_name> node.kubernetes.io/out-of-service=nodeshutdown:NoExecute
 ----
-<1> <node_name> = name of the node that shut down non-gracefully
++
+* `<node_name>` = name of the node that shut down non-gracefully
 +
 After the taint is applied, the volumes detach from the shutdown node allowing their disks to be attached to a different node.
 +
-.Example
+The resulting YAML file resembles the following example file:
 +
-The resulting YAML file resembles the following:
-+
+.Example node YAML file with out-of-service taint applied
 [source, yaml]
 ----
 spec:
@@ -65,6 +66,7 @@ spec:
 +
 [source, terminal]
 ----
-$ oc adm taint node <node_name> node.kubernetes.io/out-of-service=nodeshutdown:NoExecute- <1>
+$ oc adm taint node <node_name> node.kubernetes.io/out-of-service=nodeshutdown:NoExecute-
 ----
-<1> <node_name> = name of the node that shut down non-gracefully
++
+* `<node_name>` = name of the node that shut down non-gracefully
