--- a/storage/persistent-storage-csi-vol-detach-non-graceful-shutdown.adoc
+++ b/storage/persistent-storage-csi-vol-detach-non-graceful-shutdown.adoc
@@ -1,12 +1,15 @@
 :_mod-docs-content-type: ASSEMBLY
 [id="ephemeral-storage-csi-vol-detach-non-graceful-shutdown"]
 = Detach volumes after non-graceful node shutdown
-include::_attributes/common-attributes.adoc[]
+:toc: 
+:toc-title:
 :context: ephemeral-storage-csi-vol-detach-non-graceful-shutdown
+include::_attributes/common-attributes.adoc[]
+
+[role="_abstract"] 
+This feature allows drivers to automatically detach volumes when a node goes down non-gracefully.
 
 toc::[]
-
-This feature allows drivers to automatically detach volumes when a node goes down non-gracefully.
 
 include::modules/persistent-storage-csi-vol-detach-non-graceful-shutdown-overview.adoc[leveloffset=+1]
 
