--- a/modules/storage-ephemeral-storage-manage.adoc
+++ b/modules/storage-ephemeral-storage-manage.adoc
@@ -8,6 +8,7 @@
 [id=storage-ephemeral-storage-manage_{context}]
 = Ephemeral storage management
 
+[role="_abstract"]
 Cluster administrators can manage ephemeral storage within a project by setting quotas that define the limit ranges and number of requests for ephemeral storage across all pods in a non-terminal state. Developers can also set requests and limits on this compute resource at the pod and container level.
 
 You can manage local ephemeral storage by specifying requests and limits. Each container in a pod can specify the following:
@@ -16,7 +17,7 @@ You can manage local ephemeral storage by specifying requests and limits. Each c
 * `spec.containers[].resources.requests.ephemeral-storage`
 
 [id=storage-ephemeral-storage-limits-requests-units_{context}]
-== Ephemeral storage limits and requests units
+.Ephemeral storage limits and requests units
 Limits and requests for ephemeral storage are measured in byte quantities. You can express storage as a plain integer or as a fixed-point number using one of these suffixes: E, P, T, G, M, k. You can also use the power-of-two equivalents: Ei, Pi, Ti, Gi, Mi, Ki.
 
 For example, the following quantities all represent approximately the same value: 128974848, 129e6, 129M, and 123Mi.
@@ -27,7 +28,7 @@ The suffixes for each byte quantity are case-sensitive. Be sure to use the corre
 ====
 
 [id=storage-ephemeral-storage-requests-limits_{context}]
-== Ephemeral storage requests and limits example
+.Ephemeral storage requests and limits example
 The following example configuration file shows a pod with two containers:
 
 * Each container requests 2GiB of local ephemeral storage.
@@ -49,9 +50,9 @@ spec:
     image: images.my-company.example/app:v4
     resources:
       requests:
-        ephemeral-storage: "2Gi" <1>
+        ephemeral-storage: "2Gi"
       limits:
-        ephemeral-storage: "4Gi" <2>
+        ephemeral-storage: "4Gi"
     volumeMounts:
     - name: ephemeral
       mountPath: "/tmp"
@@ -69,12 +70,12 @@ spec:
     - name: ephemeral
       emptyDir: {}
 ----
-<1> Container request for local ephemeral storage.
-<2> Container limit for local ephemeral storage.
+* `spec.containers.name.resources.requests.ephemeral-storage`: Container request for local ephemeral storage.
+* `spec.containers.name.resources.limits.ephemeral-storage`: Container limit for local ephemeral storage.
 
 ifndef::microshift[]
 [id=storage-ephemeral-storage-scheduling-eviction_{context}]
-== Ephemeral storage configuration effects pod scheduling and eviction
+.Ephemeral storage configuration effects pod scheduling and eviction
 The settings in the pod spec affect both how the scheduler makes a decision about scheduling pods and when kubelet evicts pods.
 
 * First, the scheduler ensures that the sum of the resource requests of the scheduled containers is less than the capacity of the node. In this case, the pod can be assigned to a node only if the node's available ephemeral storage (allocatable resource) is more than 4GiB.
@@ -84,7 +85,7 @@ endif::microshift[]
 
 ifdef::microshift[]
 [id=storage-ephemeral-storage-eviction_{context}]
-== Ephemeral storage configuration effects pod eviction
+.Ephemeral storage configuration effects pod eviction
 The settings in the pod spec affect when kubelet evicts pods. At the container level, because the first container sets a resource limit, kubelet eviction manager measures the disk usage of this container and evicts the pod if the storage usage of the container exceeds its limit (4GiB). The kubelet eviction manager also marks the pod for eviction if the total usage exceeds the overall pod storage limit (8GiB).
 
 [NOTE]
